--- a/Fender Squier Classic Vibe 60s Stratocaster.html
+++ b/Fender Squier Classic Vibe 60s Stratocaster.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Fender Squier Classic Vibe 60s Stratocaster - Details</title>
     <link rel="stylesheet" href="productdetail.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
 </head>
+
 <body>
     <header>
-    <div class="logo">Guitar Shop</div>
-    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-    <nav id="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
-            <li><a href="checkout.html">Checkout</a></li>
-        </ul>
-    </nav>
-</header>
+        <div class="logo">Rudy's Music</div>
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <nav id="navbar">
+            <ul>
+                <li><a href="products.html">Home</a></li>
+                <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="checkout.html">Checkout</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <div class="product-detail">
-           <h1>Fender Squier Classic Vibe 60s Stratocaster</h1>
-           <p class="product-description">
-   Vintage style meets modern playability. With Fender-designed alnico pickups, a slim comfortable neck, and a smooth tremolo system, this Strat delivers classic tone and effortless feel. Perfect for players who love that ‘60s vibe with reliable performance.
+            <h1>Fender Squier Classic Vibe 60s Stratocaster</h1>
 
-Play the vibe. Feel the legend. 🎶
-           </p>
+            <p class="product-description">
+                Vintage style meets modern playability. With Fender-designed alnico pickups, a slim comfortable neck, and a smooth tremolo system, this Strat delivers classic tone and effortless feel. Perfect for players who love that ‘60s vibe with reliable performance.
+                <br><br>
+                Play the vibe. Feel the legend. 🎶
+            </p>
 
             <div class="product-images">
                 <img src="images/Fender Squier Classic Vibe '60s Stratocaster.jpeg" alt="Fender Squier Classic Vibe 60s Stratocaster" />
@@ -36,77 +39,149 @@ Play the vibe. Feel the legend. 🎶
                 <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-2.webp" alt="Fender Squier Classic Vibe 60s Stratocaster-2" />
                 <img src="fenderdetails/Fender Squier Classic Vibe 60s Stratocaster-3.webp" alt="Fender Squier Classic Vibe 60s Stratocaster-3" />
             </div>
+
             <p class="price">Price: $250</p>
+
             <button class="add-to-cart" onclick="addToCart('Fender Squier Classic Vibe 60s Stratocaster', 250)">Add to Cart</button>
+
+            <!-- Features Section -->
+            <section>
+                <h2>Key Features</h2>
+                <ul class="features-list">
+                    <li>Fender-designed Alnico Single-Coil Pickups</li>
+                    <li>Vintage-style tremolo bridge</li>
+                    <li>C-shaped maple neck with rosewood fingerboard</li>
+                    <li>Classic 1960s styling with aged hardware</li>
+                    <li>Slim, comfortable neck profile for easy playing</li>
+                </ul>
+            </section>
+
+            <!-- Specifications Table -->
+            <section>
+                <h2>Specifications</h2>
+                <table class="specs-table">
+                    <tr>
+                        <th>Body</th>
+                        <td>Nyatoh with gloss polyurethane finish</td>
+                    </tr>
+                    <tr>
+                        <th>Neck</th>
+                        <td>Maple, "C" Shape</td>
+                    </tr>
+                    <tr>
+                        <th>Fingerboard</th>
+                        <td>Indian Laurel, 21 Narrow-Tall Frets</td>
+                    </tr>
+                    <tr>
+                        <th>Pickups</th>
+                        <td>Fender-Designed Alnico Single-Coils</td>
+                    </tr>
+                    <tr>
+                        <th>Controls</th>
+                        <td>Master Volume, Two Tone Controls, 5-Position Blade</td>
+                    </tr>
+                    <tr>
+                        <th>Bridge</th>
+                        <td>6-Saddle Vintage-Style Synchronized Tremolo</td>
+                    </tr>
+                    <tr>
+                        <th>Finish</th>
+                        <td>3-Color Sunburst</td>
+                    </tr>
+                    <tr>
+                        <th>Weight</th>
+                        <td>Approx. 8 lbs</td>
+                    </tr>
+                </table>
+            </section>
+
+            <!-- Shipping & Returns -->
+            <section>
+                <h2>Shipping & Returns</h2>
+                <p>
+                    Free standard shipping on all USA orders. Expedited shipping options are available at checkout.
+                    Returns accepted within 30 days of delivery. Items must be in original condition with all packaging.
+                </p>
+            </section>
+
+            <!-- Customer Reviews -->
+            <section>
+                <h2>Customer Reviews</h2>
+                <p><strong>★★★★★</strong> "This guitar is pure magic. It sounds like the real vintage Fender and the feel is just perfect." - Samuel B.</p>
+                <p><strong>★★★★☆</strong> "Amazing value for the price! The tremolo is smooth, but I did have to tweak the setup a little." - Karen M.</p>
+            </section>
         </div>
     </main>
-<a href="cart.html" class="floating-cart">
-    🛒 <span id="floating-cart-count">0</span>
-</a>
+
+    <a href="cart.html" class="floating-cart">
+        🛒 <span id="floating-cart-count">0</span>
+    </a>
+
     <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+        <p>&copy; 2025 Rudy's Music. All rights reserved.</p>
     </footer>
 
+    <!-- Cart and Menu Scripts -->
     <script>
-       function addToCart(productName, productPrice) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        let productIndex = cart.findIndex(item => item.name === productName);
+        function addToCart(productName, productPrice) {
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            let productIndex = cart.findIndex(item => item.name === productName);
 
-        if (productIndex !== -1) {
-            alert('Item is already added to cart!');
-        } else {
-            cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(productName + ' added to cart!');
+            if (productIndex !== -1) {
+                alert('Item is already added to cart!');
+            } else {
+                cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
+                localStorage.setItem('cart', JSON.stringify(cart));
+                alert(productName + ' added to cart!');
+            }
+
+            updateCartCount();
+            updateFloatingCartCount();
         }
 
-        updateCartCount();
-        updateFloatingCartCount();
-
-    }
-
-    function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const count = cart.length;
-        const cartCountEl = document.getElementById('cart-count');
-        if (cartCountEl) {
-            cartCountEl.textContent = `(${count})`;
+        function updateCartCount() {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const count = cart.length;
+            const cartCountEl = document.getElementById('cart-count');
+            if (cartCountEl) {
+                cartCountEl.textContent = `(${count})`;
+            }
         }
-    }
 
-    window.addEventListener('load', updateCartCount);
+        function updateFloatingCartCount() {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const count = cart.length;
+            const cartCountEl = document.getElementById('floating-cart-count');
+            if (cartCountEl) {
+                cartCountEl.textContent = count;
+            }
+        }
 
+        window.addEventListener('load', () => {
+            updateCartCount();
+            updateFloatingCartCount();
+        });
 
-    function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
-    }
-}
-
-window.addEventListener('load', updateFloatingCartCount);
-
-
+        function toggleMenu() {
+            const navbar = document.getElementById('navbar');
+            navbar.classList.toggle('active');
+        }
     </script>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
+
 </body>
+
 </html>
