--- a/about.html
+++ b/about.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>About Us - Guitar Shop</title>
+  <title>About Us - Rudy's music</title>
   <link rel="stylesheet" href="otherstyle.css" />
 </head>
 <body>
   <header>
-    <h1>Guitar Shop</h1>
+    <h1>Rudy's music</h1>
     <nav>
-         <a href="index.html">Home</a>
+         <a href="products.html">Home</a>
+        <a href="reviews.html">Reviews</a>
       <a href="about.html" class="active">About</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="return.html">Return Policy</a>
@@ -19,9 +20,9 @@
   </header>
   
   <main>
-    <h2>About Guitar Shop</h2>
+    <h2>About Rudy's music</h2>
     
-    <p>Welcome to Guitar Shop — your ultimate destination for premium guitars and musical accessories. Since our founding in 2010, we have been passionate about connecting musicians with quality instruments that inspire creativity and performance.</p>
+    <p>Welcome to Rudy's music — your ultimate destination for premium guitars and musical accessories. Since our founding in 2010, we have been passionate about connecting musicians with quality instruments that inspire creativity and performance.</p>
     
     <h3>Our Mission</h3>
     <p>Our mission is to provide musicians of all skill levels with a carefully curated selection of guitars, amps, and gear — combining quality, affordability, and excellent customer service.</p>
@@ -50,7 +51,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
   </footer>
   <!--Start of Tawk.to Script-->
 <script type="text/javascript">
