--- a/cart.html
+++ b/cart.html
@@ -3,17 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Shopping Cart - Guitar Shop</title>
+  <title>Shopping Cart - Rudy's music</title>
   <link rel="stylesheet" href="cartstyle.css" />
 </head>
 <body>
   <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="products.html">Home</a></li>
         <li><a href="checkout.html">Checkout</a></li>
+        <li><a href="reviews.html">Reviews</a></li>
       </ul>
     </nav>
   </header>
@@ -51,7 +52,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
   </footer>
 
 <script>
