--- a/checkout.html
+++ b/checkout.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Checkout - Guitar Shop</title>
+  <title>Checkout - Rudy's music</title>
   <link rel="stylesheet" href="checkout.css" />
   <style>
     /* Quick styles for the success message */
@@ -25,8 +25,9 @@
   <div class="logo">Checkout</div>
   <nav id="navbar">
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="products.html">Home</a></li>
       <li><a href="cart.html">Cart</a></li>
+      <li><a href="reviews.html">Reviews</a></li>
     </ul>
   </nav>
 </header>
@@ -75,7 +76,7 @@
 </main>
 
 <footer>
-  <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+  <p>&copy; 2025 Rudy's music. All rights reserved.</p>
 </footer>
 
 <script>
