--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contact Us - Guitar Shop</title>
+  <title>Contact Us - Rudy's music</title>
   <link rel="stylesheet" href="otherstyle.css" />
 </head>
 <body>
   <header>
-    <h1>Guitar Shop</h1>
+    <h1>Rudy's music</h1>
     <nav>
-      <a href="index.html">Home</a>
+      <a href="products.html">Home</a>
+      <a href="reviews.html">Reviews</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="return.html">Return Policy</a>
@@ -59,7 +60,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
   </footer>
 
 <!-- AJAX Form Submission Script -->
