--- a/product-sg-bass.html
+++ b/product-sg-bass.html
@@ -1,51 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SG Bass - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Home</a></li>
             <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
 </header>
 
-    <main>
-        <div class="product-detail">
-            <h1>SG Bass</h1>
-            <p class="product-description">
-    The SG Bass combines classic looks with a deep, growling tone. Lightweight and comfortable, it's great for long playing sessions.
-</p>
-            <div class="product-images">
-                <img src="images/Gibson SG Bass.jpeg" alt="SG Bass">
-                <img src="gibsondetails/SG Bass-1.webp" alt="SG Bass Detail 1">
-                <img src="gibsondetails/SG Bass-2.webp" alt="SG Bass Detail 2">
-                <img src="gibsondetails/SG Bass-3.webp" alt="SG Bass Detail 3">
-            </div>
-            <p class="price">Price: $1,800</p>
-            <button class="add-to-cart" onclick="addToCart('SG Bass', 1800)">Add to Cart</button>
+<main>
+    <div class="product-detail">
+        <h1>SG Bass</h1>
+        <p class="product-description">
+            The SG Bass combines classic looks with a deep, growling tone. Lightweight and comfortable, it's great for long playing sessions.
+        </p>
+        <div class="product-images">
+            <img src="images/Gibson SG Bass.jpeg" alt="SG Bass" />
+            <img src="gibsondetails/SG Bass-1.webp" alt="SG Bass Detail 1" />
+            <img src="gibsondetails/SG Bass-2.webp" alt="SG Bass Detail 2" />
+            <img src="gibsondetails/SG Bass-3.webp" alt="SG Bass Detail 3" />
         </div>
-    </main>
+        <p class="price">Price: $1,800</p>
+        <button class="add-to-cart" onclick="addToCart('SG Bass', 1800)">Add to Cart</button>
 
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
+        <!-- Key Features -->
+        <section>
+            <h2>Key Features</h2>
+            <ul class="features-list">
+                <li>Classic SG body shape with solid mahogany construction</li>
+                <li>Powerful humbucker pickups for deep, growling tone</li>
+                <li>Set mahogany neck for excellent sustain</li>
+                <li>Rosewood fingerboard with 22 medium jumbo frets</li>
+                <li>Lightweight and balanced for comfort on stage</li>
+                <li>Simple control layout with volume and tone knobs</li>
+                <li>Gloss finish with vintage styling</li>
+            </ul>
+        </section>
+
+        <!-- Specifications -->
+        <section>
+            <h2>Specifications</h2>
+            <table class="specs-table">
+                <tr><th>Body</th><td>Mahogany</td></tr>
+                <tr><th>Neck</th><td>Mahogany, Set Neck</td></tr>
+                <tr><th>Fingerboard</th><td>Rosewood, 22 Medium Jumbo Frets</td></tr>
+                <tr><th>Pickups</th><td>2 x Humbuckers</td></tr>
+                <tr><th>Bridge</th><td>Fixed Tune-O-Matic</td></tr>
+                <tr><th>Controls</th><td>Volume, Tone</td></tr>
+                <tr><th>Finish</th><td>Gloss Cherry Red</td></tr>
+                <tr><th>Weight</th><td>Approx. 7.5 lbs</td></tr>
+            </table>
+        </section>
+    </div>
+</main>
+
+<footer>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
+</footer>
+
 <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
 </a>
-    <script>
-       function addToCart(productName, productPrice) {
+
+<script>
+    function addToCart(productName, productPrice) {
         let cart = JSON.parse(localStorage.getItem('cart')) || [];
         let productIndex = cart.findIndex(item => item.name === productName);
 
@@ -59,7 +90,6 @@
 
         updateCartCount();
         updateFloatingCartCount();
-
     }
 
     function updateCartCount() {
@@ -71,28 +101,27 @@
         }
     }
 
-    window.addEventListener('load', updateCartCount);
-
+    function updateFloatingCartCount() {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        const count = cart.length;
+        const cartCountEl = document.getElementById('floating-cart-count');
+        if (cartCountEl) {
+            cartCountEl.textContent = count;
+        }
+    }
 
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+        const navbar = document.getElementById('navbar');
+        navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    window.addEventListener('load', () => {
+        updateCartCount();
+        updateFloatingCartCount();
+    });
+</script>
 
-
-    </script>
-
-   <!--Start of Tawk.to Script-->
+<!--Start of Tawk.to Script-->
 <script type="text/javascript">
 var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
 (function(){
@@ -105,5 +134,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+
 </body>
 </html>
