--- a/product-sr-gio.html
+++ b/product-sr-gio.html
@@ -1,109 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SR Series (Gio/Standard) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Home</a></li>
             <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
-</header>
+  </header>
 
-    <main>
-        <div class="product-detail">
-            <h1>SR Series (Gio/Standard)</h1>
-            <p class="product-description">
-    Lightweight and fast, the SR Series Gio is perfect for beginner bassists, offering punchy tones and a sleek, comfortable design.
-</p>
-            <div class="product-images">
-                <img src="images/Ibanez SR Series Gio.webp" alt="SR Series Gio">
-                <img src="ibanezdetails/SR Series (Gio-Standard)-1.jpg" alt="SR Gio Detail 1">
-                <img src="ibanezdetails/SR Series (Gio-Standard)-2.webp" alt="SR Gio Detail 2">
-                <img src="ibanezdetails/SR Series (Gio-Standard)-3.jpg" alt="SR Gio Detail 3">
-            </div>
-            <p class="price">Price: $200</p>
-            <button class="add-to-cart" onclick="addToCart('SR Series (Gio/Standard)', 200)">Add to Cart</button>
-        </div>
-    </main>
+  <main>
+    <div class="product-detail">
+      <h1>SR Series (Gio/Standard)</h1>
+      <p class="product-description">
+        Lightweight and fast, the SR Series Gio is perfect for beginner bassists, offering punchy tones and a sleek, comfortable design.
+      </p>
+      <div class="product-images">
+        <img src="images/Ibanez SR Series Gio.webp" alt="SR Series Gio" />
+        <img src="ibanezdetails/SR Series (Gio-Standard)-1.jpg" alt="SR Gio Detail 1" />
+        <img src="ibanezdetails/SR Series (Gio-Standard)-2.webp" alt="SR Gio Detail 2" />
+        <img src="ibanezdetails/SR Series (Gio-Standard)-3.jpg" alt="SR Gio Detail 3" />
+      </div>
+      <p class="price">Price: $200</p>
+      <button class="add-to-cart" onclick="addToCart('SR Series (Gio/Standard)', 200)">Add to Cart</button>
 
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
-<a href="cart.html" class="floating-cart">
+      <section>
+        <h2>Key Features</h2>
+        <ul class="features-list">
+          <li>Sleek and lightweight bass body</li>
+          <li>Active pickups for punchy sound</li>
+          <li>Fast maple neck with smooth rosewood fingerboard</li>
+          <li>Ergonomic body shape for comfort</li>
+          <li>4-string configuration ideal for beginners</li>
+          <li>Gloss finish with modern styling</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Specifications</h2>
+        <table class="specs-table">
+          <tr><th>Body</th><td>Alder</td></tr>
+          <tr><th>Neck</th><td>Maple, Bolt-On</td></tr>
+          <tr><th>Fingerboard</th><td>Rosewood, 24 Frets</td></tr>
+          <tr><th>Pickups</th><td>1 x Humbucker, Active EQ</td></tr>
+          <tr><th>Bridge</th><td>Fixed Bridge</td></tr>
+          <tr><th>Finish</th><td>Gloss Black or White</td></tr>
+          <tr><th>Strings</th><td>4-String</td></tr>
+          <tr><th>Weight</th><td>Approx. 7 lbs</td></tr>
+        </table>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
+  </footer>
+  <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
-</a>
-    <script>
-       function addToCart(productName, productPrice) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        let productIndex = cart.findIndex(item => item.name === productName);
+  </a>
 
-        if (productIndex !== -1) {
-            alert('Item is already added to cart!');
-        } else {
-            cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(productName + ' added to cart!');
-        }
+  <script>
+    function addToCart(productName, productPrice) {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      let productIndex = cart.findIndex(item => item.name === productName);
 
-        updateCartCount();
-        updateFloatingCartCount();
+      if (productIndex !== -1) {
+          alert('Item is already added to cart!');
+      } else {
+          cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
+          localStorage.setItem('cart', JSON.stringify(cart));
+          alert(productName + ' added to cart!');
+      }
 
+      updateCartCount();
+      updateFloatingCartCount();
     }
 
     function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const count = cart.length;
-        const cartCountEl = document.getElementById('cart-count');
-        if (cartCountEl) {
-            cartCountEl.textContent = `(${count})`;
-        }
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('cart-count');
+      if (cartCountEl) {
+          cartCountEl.textContent = `(${count})`;
+      }
     }
 
     window.addEventListener('load', updateCartCount);
 
-
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    function updateFloatingCartCount() {
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('floating-cart-count');
+      if (cartCountEl) {
+          cartCountEl.textContent = count;
+      }
+    }
 
+    window.addEventListener('load', updateFloatingCartCount);
+  </script>
 
-    </script>
-
-   <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+  var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+  s1.async=true;
+  s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+  s1.charset='UTF-8';
+  s1.setAttribute('crossorigin','*');
+  s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
