--- a/product-stratocaster-player.html
+++ b/product-stratocaster-player.html
@@ -1,109 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Stratocaster (Player Series) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
-    <header>
-    <div class="logo">Guitar Shop</div>
+  <header>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
-            <li><a href="checkout.html">Checkout</a></li>
-        </ul>
+      <ul>
+        <li><a href="products.html">Home</a></li>
+        <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+        <li><a href="reviews.html">Reviews</a></li>
+        <li><a href="checkout.html">Checkout</a></li>
+      </ul>
     </nav>
-</header>
+  </header>
 
-    <main>
-        <div class="product-detail">
-            <h1>Stratocaster (Player Series)</h1>
-            <p class="product-description">
-    The Fender Stratocaster Player Series offers a perfect blend of modern feel and classic sound. Known for its bright tone and smooth playability, it’s ideal for beginners and seasoned guitarists alike.
-</p>
-            <div class="product-images">
-                <img src="images/stratocaster (Player Series).jpg" alt="Stratocaster Player">
-                <img src="fenderdetails/Stratocaster (Player Series)-1.webp" alt="Stratocaster Detail 1">
-                <img src="fenderdetails/Stratocaster (Player Series)-2.webp" alt="Stratocaster Detail 2">
-                <img src="fenderdetails/Stratocaster (Player Series)-3.webp" alt="Stratocaster Detail 3">
-            </div>
-            <p class="price">Price: $700</p>
-            <button class="add-to-cart" onclick="addToCart('Stratocaster (Player Series)', 700)">Add to Cart</button>
-        </div>
-    </main>
+  <main>
+    <div class="product-detail">
+      <h1>Stratocaster (Player Series)</h1>
+      <p class="product-description">
+        The Fender Stratocaster Player Series offers a perfect blend of modern feel and classic sound. Known for its bright tone and smooth playability, it’s ideal for beginners and seasoned guitarists alike.
+      </p>
+      <div class="product-images">
+        <img src="images/stratocaster (Player Series).jpg" alt="Stratocaster Player" />
+        <img src="fenderdetails/Stratocaster (Player Series)-1.webp" alt="Stratocaster Detail 1" />
+        <img src="fenderdetails/Stratocaster (Player Series)-2.webp" alt="Stratocaster Detail 2" />
+        <img src="fenderdetails/Stratocaster (Player Series)-3.webp" alt="Stratocaster Detail 3" />
+      </div>
+      <p class="price">Price: $700</p>
+      <button class="add-to-cart" onclick="addToCart('Stratocaster (Player Series)', 700)">Add to Cart</button>
 
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
-<a href="cart.html" class="floating-cart">
+      <section>
+        <h2>Key Features</h2>
+        <ul class="features-list">
+          <li>Modern "C" shaped maple neck for comfort</li>
+          <li>Player Series single-coil Strat pickups for classic bright tones</li>
+          <li>22 medium jumbo frets for smooth playability</li>
+          <li>2-point tremolo bridge for expressive vibrato</li>
+          <li>Gloss polyester finish in vibrant colors</li>
+          <li>Perfect balance of modern feel and vintage tone</li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>Specifications</h2>
+        <table class="specs-table">
+          <tr><th>Body</th><td>Alder</td></tr>
+          <tr><th>Neck</th><td>Maple, Modern "C" Shape</td></tr>
+          <tr><th>Fingerboard</th><td>Pau Ferro, 22 Medium Jumbo Frets</td></tr>
+          <tr><th>Pickups</th><td>Player Series Alnico V Single-Coil Stratocaster</td></tr>
+          <tr><th>Bridge</th><td>2-Point Tremolo</td></tr>
+          <tr><th>Hardware</th><td>Sealed Tuning Machines</td></tr>
+          <tr><th>Scale Length</th><td>25.5 inches (648 mm)</td></tr>
+          <tr><th>Finish</th><td>Gloss Polyester</td></tr>
+          <tr><th>Colors Available</th><td>Olympic White, Sonic Blue, Mercury</td></tr>
+          <tr><th>Weight</th><td>Approx. 7.5 lbs</td></tr>
+        </table>
+      </section>
+    </div>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Rudy's music. All rights reserved.</p>
+  </footer>
+
+  <a href="cart.html" class="floating-cart">
     🛒 <span id="floating-cart-count">0</span>
-</a>
-    <script>
-       function addToCart(productName, productPrice) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        let productIndex = cart.findIndex(item => item.name === productName);
+  </a>
 
-        if (productIndex !== -1) {
-            alert('Item is already added to cart!');
-        } else {
-            cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(productName + ' added to cart!');
-        }
+  <script>
+    function addToCart(productName, productPrice) {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      let productIndex = cart.findIndex(item => item.name === productName);
 
-        updateCartCount();
-        updateFloatingCartCount();
+      if (productIndex !== -1) {
+        alert('Item is already added to cart!');
+      } else {
+        cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
+        localStorage.setItem('cart', JSON.stringify(cart));
+        alert(productName + ' added to cart!');
+      }
 
+      updateCartCount();
+      updateFloatingCartCount();
     }
 
     function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const count = cart.length;
-        const cartCountEl = document.getElementById('cart-count');
-        if (cartCountEl) {
-            cartCountEl.textContent = `(${count})`;
-        }
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('cart-count');
+      if (cartCountEl) {
+        cartCountEl.textContent = `(${count})`;
+      }
     }
 
     window.addEventListener('load', updateCartCount);
 
-
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    function updateFloatingCartCount() {
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('floating-cart-count');
+      if (cartCountEl) {
+        cartCountEl.textContent = count;
+      }
+    }
 
+    window.addEventListener('load', updateFloatingCartCount);
+  </script>
 
-    </script>
-
-     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    (function () {
+      var s1 = document.createElement("script"),
+        s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = "https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r";
+      s1.charset = "UTF-8";
+      s1.setAttribute("crossorigin", "*");
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
