--- a/return.html
+++ b/return.html
@@ -3,14 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Return Policy - Guitar Shop</title>
+  <title>Return Policy - Rudy's music</title>
   <link rel="stylesheet" href="otherstyle.css" />
 </head>
 <body>
   <header>
-    <h1>Guitar Shop</h1>
+    <h1>Rudy's music</h1>
     <nav>
-        <a href="index.html">Home</a>
+        <a href="products.html">Home</a>
+      <a href="reviews.html">Reviews</a>
       <a href="about.html">About</a>
       <a href="privacy.html">Privacy Policy</a>
       <a href="return.html" class="active">Return Policy</a>
@@ -21,7 +22,7 @@
   <main>
     <h2>Return Policy</h2>
     
-    <p>At Guitar Shop, we want you to be fully satisfied with your purchase. If for any reason you are not happy with your order, we offer a clear and fair return policy outlined below.</p>
+    <p>At Rudy's Music, we want you to be fully satisfied with your purchase. If for any reason you are not happy with your order, we offer a clear and fair return policy outlined below.</p>
     
     <h3>1. Eligibility for Returns</h3>
     <ul>
@@ -56,7 +57,7 @@
   </main>
   
   <footer>
-    <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+    <p>&copy; Rudy's music. All rights reserved.</p>
   </footer>
 
    <!--Start of Tawk.to Script-->
