--- a/product-jem-pia.html
+++ b/product-jem-pia.html
@@ -5,106 +5,174 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>JEM / PIA (Steve Vai Signature) - Details</title>
     <link rel="stylesheet" href="productdetail.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
-   <header>
-    <div class="logo">Guitar Shop</div>
-    <button class="menu-toggle" onclick="toggleMenu()">☰</button>
-    <nav id="navbar">
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
-            <li><a href="checkout.html">Checkout</a></li>
-        </ul>
-    </nav>
-</header>
+    <header>
+        <div class="logo">Rudy's music</div>
+        <button class="menu-toggle" onclick="toggleMenu()">☰</button>
+        <nav id="navbar">
+            <ul>
+                <li><a href="products.html">Home</a></li>
+                <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+                <li><a href="reviews.html">Reviews</a></li>
+                <li><a href="checkout.html">Checkout</a></li>
+            </ul>
+        </nav>
+    </header>
 
     <main>
         <div class="product-detail">
             <h1>JEM / PIA (Steve Vai Signature)</h1>
             <p class="product-description">
-    Designed in collaboration with Steve Vai, this signature model features unique aesthetics and exceptional versatility, making it a dream guitar for virtuosos.
-</p>
+                Designed in collaboration with Steve Vai, this signature model features unique aesthetics and exceptional versatility, making it a dream guitar for virtuosos.
+            </p>
+
             <div class="product-images">
                 <img src="images/Ibanez JEM Steve Vai Signature.jpg" alt="JEM PIA Steve Vai Signature" />
                 <img src="ibanezdetails/JEM - PIA (Steve Vai Signature)-1.jpg" alt="JEM PIA Detail 1" />
                 <img src="ibanezdetails/JEM - PIA (Steve Vai Signature)-2.webp" alt="JEM PIA Detail 2" />
                 <img src="ibanezdetails/JEM - PIA (Steve Vai Signature)-3.webp" alt="JEM PIA Detail 3" />
             </div>
+
             <p class="price">Price: $3,000</p>
             <button class="add-to-cart" onclick="addToCart('JEM / PIA (Steve Vai Signature)', 3000)">Add to Cart</button>
+
+            <!-- Features Section -->
+            <section>
+                <h2>Key Features</h2>
+                <ul class="features-list">
+                    <li>Signature Steve Vai design with “Monkey Grip” handle</li>
+                    <li>Wizard neck profile for fast playability</li>
+                    <li>DiMarzio pickups customized for versatile tones</li>
+                    <li>Lo-Pro Edge tremolo system for smooth vibrato effects</li>
+                    <li>Highly detailed body and headstock graphics</li>
+                </ul>
+            </section>
+
+            <!-- Specifications Table -->
+            <section>
+                <h2>Specifications</h2>
+                <table class="specs-table">
+                    <tr>
+                        <th>Body</th>
+                        <td>Laminated Basswood</td>
+                    </tr>
+                    <tr>
+                        <th>Neck</th>
+                        <td>Wizard III Maple Neck</td>
+                    </tr>
+                    <tr>
+                        <th>Fingerboard</th>
+                        <td>Rosewood, 24 Jumbo Frets</td>
+                    </tr>
+                    <tr>
+                        <th>Pickups</th>
+                        <td>DiMarzio Evolution (Humbucker) & Single Coil</td>
+                    </tr>
+                    <tr>
+                        <th>Controls</th>
+                        <td>1 Volume, 1 Tone, 5-way Pickup Selector</td>
+                    </tr>
+                    <tr>
+                        <th>Bridge</th>
+                        <td>Lo-Pro Edge Tremolo System</td>
+                    </tr>
+                    <tr>
+                        <th>Finish</th>
+                        <td>Custom Graphic Options</td>
+                    </tr>
+                    <tr>
+                        <th>Weight</th>
+                        <td>Approx. 7.2 lbs</td>
+                    </tr>
+                </table>
+            </section>
+
+            <!-- Shipping & Returns -->
+            <section>
+                <h2>Shipping & Returns</h2>
+                <p>
+                    Free standard shipping within the USA. Expedited shipping options available at checkout.
+                    Returns accepted within 30 days of delivery. Item must be in original condition and packaging.
+                </p>
+            </section>
+
+            <!-- Customer Reviews -->
+            <section>
+                <h2>Customer Reviews</h2>
+                <p><strong>★★★★★</strong> "An absolute masterpiece and a must-have for Vai fans." - Alex M.</p>
+                <p><strong>★★★★☆</strong> "Incredible tone and playability, just wish it came in more color options." - Sara P.</p>
+            </section>
         </div>
     </main>
-<a href="cart.html" class="floating-cart">
-    🛒 <span id="floating-cart-count">0</span>
-</a>
+
+    <a href="cart.html" class="floating-cart">
+        🛒 <span id="floating-cart-count">0</span>
+    </a>
+
     <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+        <p>&copy; 2025 Rudy's music. All rights reserved.</p>
     </footer>
 
     <script>
-       function addToCart(productName, productPrice) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        let productIndex = cart.findIndex(item => item.name === productName);
+        function addToCart(productName, productPrice) {
+            let cart = JSON.parse(localStorage.getItem('cart')) || [];
+            let productIndex = cart.findIndex(item => item.name === productName);
 
-        if (productIndex !== -1) {
-            alert('Item is already added to cart!');
-        } else {
-            cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(productName + ' added to cart!');
+            if (productIndex !== -1) {
+                alert('Item is already added to cart!');
+            } else {
+                cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
+                localStorage.setItem('cart', JSON.stringify(cart));
+                alert(productName + ' added to cart!');
+            }
+
+            updateCartCount();
+            updateFloatingCartCount();
         }
 
-        updateCartCount();
-        updateFloatingCartCount();
-
-    }
-
-    function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const count = cart.length;
-        const cartCountEl = document.getElementById('cart-count');
-        if (cartCountEl) {
-            cartCountEl.textContent = `(${count})`;
+        function updateCartCount() {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const count = cart.length;
+            const cartCountEl = document.getElementById('cart-count');
+            if (cartCountEl) {
+                cartCountEl.textContent = `(${count})`;
+            }
         }
-    }
 
-    window.addEventListener('load', updateCartCount);
+        function updateFloatingCartCount() {
+            const cart = JSON.parse(localStorage.getItem('cart')) || [];
+            const count = cart.length;
+            const cartCountEl = document.getElementById('floating-cart-count');
+            if (cartCountEl) {
+                cartCountEl.textContent = count;
+            }
+        }
 
+        window.addEventListener('load', () => {
+            updateCartCount();
+            updateFloatingCartCount();
+        });
 
-    function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
-    }
-}
-
-window.addEventListener('load', updateFloatingCartCount);
-
-
-
+        function toggleMenu() {
+            const navbar = document.getElementById('navbar');
+            navbar.classList.toggle('active');
+        }
     </script>
 
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <!--Start of Tawk.to Script-->
+    <script type="text/javascript">
+        var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+        (function () {
+            var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+            s1.async = true;
+            s1.src = 'https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+            s1.charset = 'UTF-8';
+            s1.setAttribute('crossorigin', '*');
+            s0.parentNode.insertBefore(s1, s0);
+        })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
