--- a/product-les-paul-studio.html
+++ b/product-les-paul-studio.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Les Paul Studio - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
    <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Home</a></li>
             <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
@@ -25,23 +25,77 @@
         <div class="product-detail">
             <h1>Les Paul Studio</h1>
             <p class="product-description">
-    The Les Paul Studio offers professional sound in a stripped-down, affordable package. It’s a favorite for studio musicians and gigging players.
-</p>
+                The Les Paul Studio offers professional sound in a stripped-down, affordable package. It’s a favorite for studio musicians and gigging players.
+            </p>
             <div class="product-images">
-                <img src="images/Les Paul Studio.jpeg" alt="Les Paul Studio">
-                <img src="gibsondetails/Les Paul Studio-1.webp" alt="Les Paul Studio Detail 1">
-                <img src="gibsondetails/Les Paul Studio-2.webp" alt="Les Paul Studio Detail 2">
-                <img src="gibsondetails/Les Paul Studio-3.webp" alt="Les Paul Studio Detail 3">
+                <img src="images/Les Paul Studio.jpeg" alt="Les Paul Studio" />
+                <img src="gibsondetails/Les Paul Studio-1.webp" alt="Les Paul Studio Detail 1" />
+                <img src="gibsondetails/Les Paul Studio-2.webp" alt="Les Paul Studio Detail 2" />
+                <img src="gibsondetails/Les Paul Studio-3.webp" alt="Les Paul Studio Detail 3" />
             </div>
             <p class="price">Price: $1,700</p>
             <button class="add-to-cart" onclick="addToCart('Les Paul Studio', 1700)">Add to Cart</button>
+
+            <!-- Features Section -->
+            <section>
+                <h2>Key Features</h2>
+                <ul class="features-list">
+                    <li>Mahogany body with maple top for classic tone</li>
+                    <li>Mahogany neck with slim taper profile</li>
+                    <li>Rosewood fingerboard with 22 medium jumbo frets</li>
+                    <li>490R and 498T humbuckers for versatile sound</li>
+                    <li>Traditional Tune-o-Matic bridge with stopbar tailpiece</li>
+                    <li>Matte or gloss finish options for stage-ready looks</li>
+                </ul>
+            </section>
+
+            <!-- Specifications Table -->
+            <section>
+                <h2>Specifications</h2>
+                <table class="specs-table">
+                    <tr>
+                        <th>Body</th>
+                        <td>Mahogany with Maple Top</td>
+                    </tr>
+                    <tr>
+                        <th>Neck</th>
+                        <td>Mahogany, Slim Taper Profile</td>
+                    </tr>
+                    <tr>
+                        <th>Fingerboard</th>
+                        <td>Rosewood, 22 Medium Jumbo Frets</td>
+                    </tr>
+                    <tr>
+                        <th>Pickups</th>
+                        <td>490R (Neck), 498T (Bridge) Humbuckers</td>
+                    </tr>
+                    <tr>
+                        <th>Controls</th>
+                        <td>2 Volume, 2 Tone, 3-Way Selector</td>
+                    </tr>
+                    <tr>
+                        <th>Bridge</th>
+                        <td>Tune-o-Matic with Stopbar Tailpiece</td>
+                    </tr>
+                    <tr>
+                        <th>Finish</th>
+                        <td>Matte or Gloss Nitrocellulose</td>
+                    </tr>
+                    <tr>
+                        <th>Weight</th>
+                        <td>Approx. 9.3 lbs</td>
+                    </tr>
+                </table>
+            </section>
         </div>
     </main>
-<a href="cart.html" class="floating-cart">
-    🛒 <span id="floating-cart-count">0</span>
-</a>
+
+    <a href="cart.html" class="floating-cart">
+        🛒 <span id="floating-cart-count">0</span>
+    </a>
+
     <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+        <p>&copy; 2025 Rudy's music. All rights reserved.</p>
     </footer>
 
     <script>
@@ -59,7 +113,6 @@
 
         updateCartCount();
         updateFloatingCartCount();
-
     }
 
     function updateCartCount() {
@@ -71,25 +124,24 @@
         }
     }
 
-    window.addEventListener('load', updateCartCount);
-
-
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+        const navbar = document.getElementById('navbar');
+        navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    function updateFloatingCartCount() {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        const count = cart.length;
+        const cartCountEl = document.getElementById('floating-cart-count');
+        if (cartCountEl) {
+            cartCountEl.textContent = count;
+        }
+    }
 
-
+    window.addEventListener('load', () => {
+        updateCartCount();
+        updateFloatingCartCount();
+    });
     </script>
 
 <!--Start of Tawk.to Script-->
@@ -105,5 +157,6 @@ s0.parentNode.insertBefore(s1,s0);
 })();
 </script>
 <!--End of Tawk.to Script-->
+
 </body>
 </html>
