--- a/product-precision-player.html
+++ b/product-precision-player.html
@@ -1,109 +1,139 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Precision Bass (Player Series) - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
   <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Home</a></li>
             <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
-</header>
+  </header>
 
-    <main>
-        <div class="product-detail">
-            <h1>Precision Bass (Player Series)</h1>
-            <p class="product-description">
-    The Precision Bass Player Series is the go-to bass for punchy, deep tones and rock-solid reliability. Great for stage and studio performances.
-</p>
-            <div class="product-images">
-                <img src="images/Fender Precision Bass Player Series.webp" alt="Precision Bass Player">
-                <img src="fenderdetails/Precision Bass (Player Series)-1.jpg" alt="Precision Bass Detail 1">
-                <img src="fenderdetails/Precision Bass (Player Series)-2.webp" alt="Precision Bass Detail 2">
-                <img src="fenderdetails/Precision Bass (Player Series)-3.jpg" alt="Precision Bass Detail 3">
-            </div>
-            <p class="price">Price: $900</p>
-            <button class="add-to-cart" onclick="addToCart('Precision Bass (Player Series)', 900)">Add to Cart</button>
+  <main>
+    <div class="product-detail">
+        <h1>Precision Bass (Player Series)</h1>
+        <p class="product-description">
+          The Precision Bass Player Series is the go-to bass for punchy, deep tones and rock-solid reliability. Great for stage and studio performances.
+        </p>
+        <div class="product-images">
+            <img src="images/Fender Precision Bass Player Series.webp" alt="Precision Bass Player" />
+            <img src="fenderdetails/Precision Bass (Player Series)-1.jpg" alt="Precision Bass Detail 1" />
+            <img src="fenderdetails/Precision Bass (Player Series)-2.webp" alt="Precision Bass Detail 2" />
+            <img src="fenderdetails/Precision Bass (Player Series)-3.jpg" alt="Precision Bass Detail 3" />
         </div>
-    </main>
-<a href="cart.html" class="floating-cart">
-    🛒 <span id="floating-cart-count">0</span>
-</a>
-    <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
-    </footer>
+        <p class="price">Price: $900</p>
+        <button class="add-to-cart" onclick="addToCart('Precision Bass (Player Series)', 900)">Add to Cart</button>
 
-    <script>
-      function addToCart(productName, productPrice) {
-        let cart = JSON.parse(localStorage.getItem('cart')) || [];
-        let productIndex = cart.findIndex(item => item.name === productName);
+        <!-- Features Section -->
+        <section>
+          <h2>Key Features</h2>
+          <ul class="features-list">
+            <li>Alder body for balanced sound and lightweight feel</li>
+            <li>Modern "C" shaped maple neck for comfortable play</li>
+            <li>Rosewood fingerboard with 20 medium jumbo frets</li>
+            <li>Player Series Split Single-Coil Precision Bass pickup</li>
+            <li>3-ply black pickguard</li>
+            <li>Standard open-gear tuning machines</li>
+            <li>Standard 4-saddle bridge</li>
+          </ul>
+        </section>
 
-        if (productIndex !== -1) {
-            alert('Item is already added to cart!');
-        } else {
-            cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
-            localStorage.setItem('cart', JSON.stringify(cart));
-            alert(productName + ' added to cart!');
-        }
+        <!-- Specifications Table -->
+        <section>
+          <h2>Specifications</h2>
+          <table class="specs-table">
+            <tr><th>Body</th><td>Alder</td></tr>
+            <tr><th>Neck</th><td>Maple, Modern "C" Shape</td></tr>
+            <tr><th>Fingerboard</th><td>Rosewood, 20 Medium Jumbo Frets</td></tr>
+            <tr><th>Pickups</th><td>Player Series Split Single-Coil Precision Bass</td></tr>
+            <tr><th>Controls</th><td>Master Volume, Master Tone</td></tr>
+            <tr><th>Bridge</th><td>4-Saddle Standard</td></tr>
+            <tr><th>Tuning Machines</th><td>Standard Open-Gear</td></tr>
+            <tr><th>Finish</th><td>Gloss Polyurethane</td></tr>
+            <tr><th>Weight</th><td>Approx. 9.5 lbs</td></tr>
+          </table>
+        </section>
+    </div>
+  </main>
 
-        updateCartCount();
-        updateFloatingCartCount();
+  <a href="cart.html" class="floating-cart">
+      🛒 <span id="floating-cart-count">0</span>
+  </a>
 
+  <footer>
+      <p>&copy; 2025 Rudy's music. All rights reserved.</p>
+  </footer>
+
+  <script>
+    function addToCart(productName, productPrice) {
+      let cart = JSON.parse(localStorage.getItem('cart')) || [];
+      let productIndex = cart.findIndex(item => item.name === productName);
+
+      if (productIndex !== -1) {
+          alert('Item is already added to cart!');
+      } else {
+          cart.push({ name: productName, price: productPrice, quantity: 1, colors: [] });
+          localStorage.setItem('cart', JSON.stringify(cart));
+          alert(productName + ' added to cart!');
+      }
+
+      updateCartCount();
+      updateFloatingCartCount();
     }
 
     function updateCartCount() {
-        const cart = JSON.parse(localStorage.getItem('cart')) || [];
-        const count = cart.length;
-        const cartCountEl = document.getElementById('cart-count');
-        if (cartCountEl) {
-            cartCountEl.textContent = `(${count})`;
-        }
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('cart-count');
+      if (cartCountEl) {
+          cartCountEl.textContent = `(${count})`;
+      }
     }
 
-    window.addEventListener('load', updateCartCount);
-
+    function updateFloatingCartCount() {
+      const cart = JSON.parse(localStorage.getItem('cart')) || [];
+      const count = cart.length;
+      const cartCountEl = document.getElementById('floating-cart-count');
+      if (cartCountEl) {
+          cartCountEl.textContent = count;
+      }
+    }
 
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+      const navbar = document.getElementById('navbar');
+      navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    window.addEventListener('load', () => {
+      updateCartCount();
+      updateFloatingCartCount();
+    });
+  </script>
 
-
-    </script>
-
-<!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+  <!--Start of Tawk.to Script-->
+  <script type="text/javascript">
+  var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+  (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+  })();
+  </script>
+  <!--End of Tawk.to Script-->
 </body>
 </html>
