--- a/product-sg-standard.html
+++ b/product-sg-standard.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SG Standard - Details</title>
-    <link rel="stylesheet" href="productdetail.css">
-    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet">
-
+    <link rel="stylesheet" href="productdetail.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Lora:wght@600;700&family=Merriweather&display=swap" rel="stylesheet" />
 </head>
 <body>
    <header>
-    <div class="logo">Guitar Shop</div>
+    <div class="logo">Rudy's music</div>
     <button class="menu-toggle" onclick="toggleMenu()">☰</button>
     <nav id="navbar">
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Home</a></li>
             <li><a href="cart.html">Cart <span id="cart-count">(0)</span></a></li>
+            <li><a href="reviews.html">Reviews</a></li>
             <li><a href="checkout.html">Checkout</a></li>
         </ul>
     </nav>
@@ -27,22 +27,47 @@
     Lightweight and fast, the SG Standard is renowned for its sharp attack and deep sustain. A perfect companion for rock and blues.
 </p>
             <div class="product-images">
-                <img src="images/SG Standard.webp" alt="SG Standard">
-                <img src="gibsondetails/SG Standard-1.webp" alt="SG Standard Detail 1">
-                <img src="gibsondetails/SG Standard-2.webp" alt="SG Standard Detail 2">
-                <img src="gibsondetails/SG Standard-3.webp" alt="SG Standard Detail 3">
+                <img src="images/SG Standard.webp" alt="SG Standard" />
+                <img src="gibsondetails/SG Standard-1.webp" alt="SG Standard Detail 1" />
+                <img src="gibsondetails/SG Standard-2.webp" alt="SG Standard Detail 2" />
+                <img src="gibsondetails/SG Standard-3.webp" alt="SG Standard Detail 3" />
             </div>
             <p class="price">Price: $1,800</p>
             <button class="add-to-cart" onclick="addToCart('SG Standard', 1800)">Add to Cart</button>
+
+            <section>
+                <h2>Key Features</h2>
+                <ul class="features-list">
+                    <li>Classic SG double-cutaway body</li>
+                    <li>Lightweight mahogany construction</li>
+                    <li>Powerful humbucker pickups</li>
+                    <li>Rosewood fingerboard with 22 frets</li>
+                    <li>Fast, slim neck for easy playability</li>
+                    <li>Gloss finish with vintage aesthetics</li>
+                </ul>
+            </section>
+
+            <section>
+                <h2>Specifications</h2>
+                <table class="specs-table">
+                    <tr><th>Body</th><td>Mahogany</td></tr>
+                    <tr><th>Neck</th><td>Mahogany, Set Neck</td></tr>
+                    <tr><th>Fingerboard</th><td>Rosewood, 22 Frets</td></tr>
+                    <tr><th>Pickups</th><td>2 x Humbuckers</td></tr>
+                    <tr><th>Bridge</th><td>Tune-O-Matic with Stopbar Tailpiece</td></tr>
+                    <tr><th>Finish</th><td>Gloss Cherry</td></tr>
+                    <tr><th>Weight</th><td>Approx. 6.8 lbs</td></tr>
+                </table>
+            </section>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Guitar Shop. All rights reserved.</p>
+        <p>&copy; 2025 Rudy's music. All rights reserved.</p>
     </footer>
     <a href="cart.html" class="floating-cart">
-    🛒 <span id="floating-cart-count">0</span>
-</a>
+        🛒 <span id="floating-cart-count">0</span>
+    </a>
 
     <script>
       function addToCart(productName, productPrice) {
@@ -59,7 +84,6 @@
 
         updateCartCount();
         updateFloatingCartCount();
-
     }
 
     function updateCartCount() {
@@ -73,37 +97,35 @@
 
     window.addEventListener('load', updateCartCount);
 
-
     function toggleMenu() {
-    const navbar = document.getElementById('navbar');
-    navbar.classList.toggle('active');
-}
-function updateFloatingCartCount() {
-    const cart = JSON.parse(localStorage.getItem('cart')) || [];
-    const count = cart.length;
-    const cartCountEl = document.getElementById('floating-cart-count');
-    if (cartCountEl) {
-        cartCountEl.textContent = count;
+        const navbar = document.getElementById('navbar');
+        navbar.classList.toggle('active');
     }
-}
 
-window.addEventListener('load', updateFloatingCartCount);
+    function updateFloatingCartCount() {
+        const cart = JSON.parse(localStorage.getItem('cart')) || [];
+        const count = cart.length;
+        const cartCountEl = document.getElementById('floating-cart-count');
+        if (cartCountEl) {
+            cartCountEl.textContent = count;
+        }
+    }
 
-
+    window.addEventListener('load', updateFloatingCartCount);
     </script>
 
     <!--Start of Tawk.to Script-->
-<script type="text/javascript">
-var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
-(function(){
-var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
-s1.async=true;
-s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
-s1.charset='UTF-8';
-s1.setAttribute('crossorigin','*');
-s0.parentNode.insertBefore(s1,s0);
-})();
-</script>
-<!--End of Tawk.to Script-->
+    <script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/6863a0382988aa1919e03776/1iv2ijo1r';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
+    </script>
+    <!--End of Tawk.to Script-->
 </body>
 </html>
